--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Arnavion <arnavion@gmail.com>"]
 
 [dependencies]
+backtrace = "0.3.x"
+env_logger = "0.4.x"
+log = "0.3.x"
 serde = "1.0.x"
 serde_derive = "1.0.x"
 serde_json = "1.0.x"
