Emit the string formats correctly.
- `byte` and `int-or-string` are emitted as newtypes around `Vec<u8>` that impl {De}Serialize accordingly.
- `date-time` is emitted as `chrono::DateTime<chrono::Utc>`

Fixes #1
Fixes #2

--- a/k8s-openapi/Cargo.toml
+++ b/k8s-openapi/Cargo.toml
@@ -5,5 +5,7 @@ authors = ["Arnavion <arnavion@gmail.com>"]
 publish = false
 
 [dependencies]
+base64 = "0.9.x"
+chrono = { version = "0.4.x", features = ["serde"] }
 serde = "1.0.x"
 serde_derive = "1.0.x"
