--- a/k8s-openapi/Cargo.toml
+++ b/k8s-openapi/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 base64 = "0.9.x"
 chrono = { version = "0.4.x", features = ["serde"] }
 serde = "1.0.x"
+serde_json = "1.0.x"
 
 [features]
 v1_7 = []
