Support multiple minikube contexts in the kubeconfig.

--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -10,6 +10,7 @@ k8s-openapi = { path = "../k8s-openapi" , features = ["reqwest"]}
 http = "0.1.x"
 reqwest = "0.8.x"
 serde = "1.0.x"
+serde_derive = "1.0.x"
 serde_json = "*"
 serde_yaml = "0.7.x"
 
