--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -19,8 +19,8 @@ winapi = { version = "0.3.x", features = ["bcrypt", "errhandlingapi", "minwindef
 openssl = "0.10.x"
 
 [features]
-v1_7 = ["k8s-openapi/v1_7"]
-v1_8 = ["k8s-openapi/v1_8"]
-v1_9 = ["k8s-openapi/v1_9"]
-v1_10 = ["k8s-openapi/v1_10"]
-v1_11 = ["k8s-openapi/v1_11"]
+test_v1_7 = ["k8s-openapi/v1_7"]
+test_v1_8 = ["k8s-openapi/v1_8"]
+test_v1_9 = ["k8s-openapi/v1_9"]
+test_v1_10 = ["k8s-openapi/v1_10"]
+test_v1_11 = ["k8s-openapi/v1_11"]
