--- a/k8s-openapi/Cargo.toml
+++ b/k8s-openapi/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "k8s-openapi"
 version = "0.1.0"
+license = "Apache-2.0"
 authors = ["Arnavion <arnavion@gmail.com>"]
+description = "Bindings for the Kubernetes client API"
+documentation = "https://docs.rs/k8s-openapi"
+repository = "https://github.com/Arnavion/k8s-openapi-codegen"
 
 [dependencies]
 base64 = "0.9.x"
