--- a/k8s-openapi/Cargo.toml
+++ b/k8s-openapi/Cargo.toml
@@ -3,8 +3,11 @@ name = "k8s-openapi"
 version = "0.1.0"
 license = "Apache-2.0"
 authors = ["Arnavion <arnavion@gmail.com>"]
+categories = ["api-bindings", "web-programming::http-client"]
 description = "Bindings for the Kubernetes client API"
 documentation = "https://docs.rs/k8s-openapi"
+keywords = ["client", "kubernetes", "k8s", "http"]
+readme = "README.md"
 repository = "https://github.com/Arnavion/k8s-openapi-codegen"
 
 [dependencies]
