--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ rust:
 - stable
 
 env:
-- FEATURE=test_v1_7
+- FEATURE=v1_7
   K8S_VERSION=v1.7.5
-- FEATURE=test_v1_8
+- FEATURE=v1_8
   K8S_VERSION=v1.8.0
-- FEATURE=test_v1_9
+- FEATURE=v1_9
   K8S_VERSION=v1.9.4
-- FEATURE=test_v1_10
-- FEATURE=test_v1_11
+- FEATURE=v1_10
+- FEATURE=v1_11
 
 script:
 - bash ./ci/travis.sh
