--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,44 +1,53 @@
-pool:
-  vmImage: 'Ubuntu 16.04'
+jobs:
+- job: CI
+  pool:
+    vmImage: 'ubuntu-16.04'
 
-strategy:
-  matrix:
-    v1_7:
-      feature: v1_7
-      k8sVersion: v1.7.16
-      minikubeVersion: v0.28.0
-      crictlVersion: v1.11.1
-    v1_8:
-      feature: v1_8
-      k8sVersion: v1.8.15
-      minikubeVersion: v0.28.0
-      crictlVersion: v1.11.1
-    v1_9:
-      feature: v1_9
-      k8sVersion: v1.9.11
-      minikubeVersion: v0.28.0
-      crictlVersion: v1.11.1
-    v1_10:
-      feature: v1_10
-      k8sVersion: v1.10.9
-      minikubeVersion: v0.28.2
-      crictlVersion: v1.11.1
-    v1_11:
-      feature: v1_11
-      k8sVersion: v1.11.4
-      minikubeVersion: v0.28.2
-      crictlVersion: v1.11.1
-    v1_12:
-      feature: v1_12
-      k8sVersion: v1.12.2
-      minikubeVersion: v0.30.0
-      crictlVersion: v1.12.0
-  maxParallel: 10
+  strategy:
+    matrix:
+      v1_7:
+        feature: v1_7
+        k8sVersion: v1.7.16
+        minikubeVersion: v0.28.0
+        crictlVersion: v1.11.1
+      v1_8:
+        feature: v1_8
+        k8sVersion: v1.8.15
+        minikubeVersion: v0.28.0
+        crictlVersion: v1.11.1
+      v1_9:
+        feature: v1_9
+        k8sVersion: v1.9.11
+        minikubeVersion: v0.28.0
+        crictlVersion: v1.11.1
+      v1_10:
+        feature: v1_10
+        k8sVersion: v1.10.9
+        minikubeVersion: v0.28.2
+        crictlVersion: v1.11.1
+      v1_11:
+        feature: v1_11
+        k8sVersion: v1.11.4
+        minikubeVersion: v0.28.2
+        crictlVersion: v1.11.1
+      v1_12:
+        feature: v1_12
+        k8sVersion: v1.12.2
+        minikubeVersion: v0.30.0
+        crictlVersion: v1.12.0
+    maxParallel: 10
 
-steps:
-- bash: bash ./ci/ci.sh
-  env:
-    FEATURE: "$(feature)"
-    K8S_VERSION: "$(k8sVersion)"
-    MINIKUBE_VERSION: "$(minikubeVersion)"
-    CRICTL_VERSION: "$(crictlVersion)"
+  steps:
+  - bash: bash ./ci/ci.sh
+    env:
+      FEATURE: "$(feature)"
+      K8S_VERSION: "$(k8sVersion)"
+      MINIKUBE_VERSION: "$(minikubeVersion)"
+      CRICTL_VERSION: "$(crictlVersion)"
+
+- job: Clippy
+  pool:
+    vmImage: 'ubuntu-16.04'
+
+  steps:
+  - bash: bash ./ci/clippy.sh
