Switch tests to use pre-recorded responses instead of a live k8s cluster.
CI has a hard time satisfying k8s's requirements. The Azure CI image uses
Docker 18.09 whereas kubeadm insists on 18.06, and minikube gives no way to
disable the corresponding pre-flight check in the call to `kubeadm init`

With this change, the tests replay responses to requests using the JSON files
saved under `k8s-openapi-tests/test-replays`. The README there explains how
to generate the files.

This change also fixes a bug in the way `MultipleValuesIterator` read
the response and used `ResponseBody` to parse the results. A single slice added
to a `ResponseBody` after one call to `Read::read` can result in multiple new
values, so bailing when the `Read` was completely drained could end up not
deserializing the last few values. The fix required adding a new
`ResponseBody::parse` function, so `ResponseBody::append_slice_and_parse` is
now deprecated in favor of calling `ResponseBody::append_slice` and
`ResponseBody::parse` individually.

--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 backtrace = "0.3.x"
+bytes = "0.4.x"
 dirs = "1.0.x"
 k8s-openapi = { path = "../k8s-openapi" }
 reqwest = "0.9.x"
