--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,10 @@ jobs:
 
   steps:
   - bash: bash ./ci/clippy.sh
+
+- job: Docs
+  pool:
+    vmImage: 'ubuntu-16.04'
+
+  steps:
+  - bash: bash ./ci/docs.sh
