--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -15,7 +15,7 @@ serde_derive = "1.0.x"
 serde_yaml = "0.8.x"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3.x", features = ["bcrypt", "errhandlingapi", "minwindef", "ncrypt", "wincrypt", "winnt"] }
+winapi = { version = "0.3.6", features = ["bcrypt", "errhandlingapi", "minwindef", "ncrypt", "wincrypt", "winnt"] }
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = "0.10.x"
