--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 jobs:
-- job: CI
+- job: k8s_openapi
   pool:
     vmImage: 'ubuntu-16.04'
 
@@ -20,13 +20,13 @@ jobs:
     maxParallel: 10
 
   steps:
-  - bash: bash ./ci/ci.sh
+  - bash: bash ./ci/k8s-openapi.sh
     env:
       FEATURE: "$(feature)"
 
-- job: Clippy
+- job: k8s_openapi_codegen
   pool:
     vmImage: 'ubuntu-16.04'
 
   steps:
-  - bash: bash ./ci/clippy.sh
+  - bash: bash ./ci/k8s-openapi-codegen.sh
