--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 backtrace = "0.3.x"
-dirs = "1.0.x"
+dirs = "2"
 k8s-openapi = { path = ".." }
 reqwest = "0.9.x"
 serde = "1.0.x"
