Make k8s-openapi-codegen-common's serde dependency optional.
k8s-openapi-derive doesn't need it because it constructs the spec in Rust.
Only k8s-openapi-codegen needs it to because it parses
the upstream OpenAPI spec.

Fixes #48

--- a/k8s-openapi-codegen-common/Cargo.toml
+++ b/k8s-openapi-codegen-common/Cargo.toml
@@ -20,5 +20,4 @@ include = [
 [dependencies]
 http = "0.1"
 log = "0.4"
-serde = { version = "1", features = ["rc"] }
-serde_derive = "1"
+serde = { version = "1", features = ["derive", "rc"], optional = true }
