--- a/k8s-openapi-codegen/Cargo.toml
+++ b/k8s-openapi-codegen/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 backtrace = "0.3"
 env_logger = "0.6"
-k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common" }
+k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = ["serde"] }
 log = "0.4"
 reqwest = "0.9"
 serde = "1"
