--- a/k8s-openapi-derive/Cargo.toml
+++ b/k8s-openapi-derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "k8s-openapi-derive"
-version = "0.4.0-beta.1"
+version = "0.5.0-beta.1"
 license = "Apache-2.0"
 authors = ["Arnavion <arnavion@gmail.com>"]
 categories = ["api-bindings", "web-programming::http-client"]
@@ -19,10 +19,10 @@ include = [
 
 [dependencies]
 http = "0.1"
-k8s-openapi-codegen-common = { version = "=0.4.0", path = "../k8s-openapi-codegen-common" }
+k8s-openapi-codegen-common = { version = "=0.5.0", path = "../k8s-openapi-codegen-common" }
 proc-macro2 = "0.4"
 quote = "0.6"
-syn = "0.15"
+syn = { version = "0.15", features = ["extra-traits"] }
 
 [lib]
 proc-macro = true
