--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,14 +19,14 @@ include = [
 ]
 
 [dependencies]
-base64 = "0.10.x"
-bytes = "0.4.x"
-chrono = { version = "0.4.x", features = ["serde"] }
-http = "0.1.x"
+base64 = "0.10"
+bytes = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+http = "0.1"
 percent-encoding = "2"
-serde = "1.0.x"
-serde_json = "1.0.x"
-serde-value = "0.6.x"
+serde = "1"
+serde_json = "1"
+serde-value = "0.6"
 url = "2"
 
 [features]
