Set up crates for self-hosted docs.
Fixes #57

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ license = "Apache-2.0"
 authors = ["Arnavion <arnavion@gmail.com>"]
 categories = ["api-bindings", "web-programming::http-client"]
 description = "Bindings for the Kubernetes client API"
-documentation = "https://docs.rs/k8s-openapi"
+documentation = "https://arnavion.github.io/k8s-openapi/v0.6.x/k8s-openapi/"
 edition = "2018"
 keywords = ["client", "kubernetes", "k8s", "http"]
 readme = "README.md"
