--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "k8s-openapi-tests"
 version = "0.1.0"
-authors = ["Arnavion <arnavion@gmail.com>"]
+authors = ["Arnavion <me@arnavion.dev>"]
 publish = false
 edition = "2018"
 
