--- a/k8s-openapi-codegen-common/Cargo.toml
+++ b/k8s-openapi-codegen-common/Cargo.toml
@@ -2,7 +2,7 @@
 name = "k8s-openapi-codegen-common"
 version = "0.7.0"
 license = "Apache-2.0"
-authors = ["Arnavion <arnavion@gmail.com>"]
+authors = ["Arnavion <me@arnavion.dev>"]
 categories = ["api-bindings", "web-programming::http-client"]
 description = "Common code for the k8s-openapi code generator and k8s-openapi-derive"
 documentation = "https://docs.rs/k8s-openapi-codegen-common"
