Also self-host k8s-openapi-codegen-common docs.

--- a/k8s-openapi-codegen-common/Cargo.toml
+++ b/k8s-openapi-codegen-common/Cargo.toml
@@ -5,7 +5,7 @@ license = "Apache-2.0"
 authors = ["Arnavion <me@arnavion.dev>"]
 categories = ["api-bindings", "web-programming::http-client"]
 description = "Common code for the k8s-openapi code generator and k8s-openapi-derive"
-documentation = "https://docs.rs/k8s-openapi-codegen-common"
+documentation = "https://arnavion.github.io/k8s-openapi/v0.8.x/k8s_openapi_codegen_common/"
 edition = "2018"
 keywords = ["client", "kubernetes", "k8s", "http"]
 readme = "README.md"
