--- a/k8s-openapi-codegen/Cargo.toml
+++ b/k8s-openapi-codegen/Cargo.toml
@@ -11,6 +11,6 @@ env_logger = "0.7"
 http = "0.2"
 k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = ["serde"] }
 log = "0.4"
-reqwest = { version = "0.10", features = ["blocking", "json"] }
+reqwest = { version = "0.11", default-features = false, features = ["blocking", "default-tls", "json"] }
 serde = "1"
 serde_derive = "1"
