--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-[workspace]
-members = ["k8s-openapi-codegen", "k8s-openapi-codegen-common"]
-
 [package]
 name = "k8s-openapi"
 version = "0.11.0"
@@ -42,21 +39,20 @@ serde-value = "0.7"
 url = { version = "2", optional = true }
 
 [features]
-default = ["v1_20"]
-#default = ["api"]
+default = ["api"]
 
 api = ["http", "percent-encoding", "url"] # Enables API operation functions and response types. If disabled, only the resource types will be exported.
 
 # Each feature corresponds to a supported version of Kubernetes
-#v1_11 = []
-#v1_12 = []
-#v1_13 = []
-#v1_14 = []
-#v1_15 = []
-#v1_16 = []
-#v1_17 = []
-#v1_18 = []
-#v1_19 = []
+v1_11 = []
+v1_12 = []
+v1_13 = []
+v1_14 = []
+v1_15 = []
+v1_16 = []
+v1_17 = []
+v1_18 = []
+v1_19 = []
 v1_20 = []
 
 [package.metadata.docs.rs]
