Support custom spec sources.
k8s-openapi-codegen now takes zero or more `--generate` args,
which can be used to specify a subset of versions to generate the bindings for,
and to override the spec URL for those versions.

Closes #90

--- a/k8s-openapi-codegen/Cargo.toml
+++ b/k8s-openapi-codegen/Cargo.toml
@@ -14,3 +14,4 @@ log = "0.4"
 reqwest = { version = "0.11", default-features = false, features = ["blocking", "default-tls", "json"] }
 serde = "1"
 serde_derive = "1"
+structopt = "0.3"
