--- a/k8s-openapi-codegen/Cargo.toml
+++ b/k8s-openapi-codegen/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 backtrace = "0.3"
 env_logger = "0.8"
 http = "0.2"
-k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = ["serde"] }
+k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = ["serde", "schema"] }
 log = "0.4"
 reqwest = { version = "0.11", default-features = false, features = ["blocking", "default-tls", "json"] }
 serde = "1"
