--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ bytes = "1"
 chrono = { version = "0.4.1", features = ["serde"] }
 http = { version = "0.2", optional = true }
 percent-encoding = { version = "2", optional = true }
+schemars = { version = "0.8", optional = true }
 serde = "1"
 serde_json = "1"
 serde-value = "0.7"
