--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -13,7 +13,7 @@ include = [
 [dependencies]
 base64 = "0.13"
 dirs = "3"
-k8s-openapi = { path = ".." }
+k8s-openapi = { path = "..", features = ["schemars"] }
 k8s-openapi-derive = { path = "../k8s-openapi-derive" }
 openssl = "0.10"
 reqwest = { version = "0.11", default-features = false, features = ["blocking", "native-tls"] }
