Make the root crate a cargo workspace of all the other crates.
This is needed for Rust-Analyzer to find all sub-projects.

Closes #107

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,3 +61,12 @@ v1_22 = []
 [package.metadata.docs.rs]
 # docs.rs generates docs for the latest version. To see the docs for an older version, please generate them yourself.
 features = ["v1_22"]
+
+[workspace]
+members = [
+    "k8s-openapi-codegen",
+    "k8s-openapi-codegen-common",
+    "k8s-openapi-derive",
+    "k8s-openapi-tests",
+    "k8s-openapi-tests-macro-deps",
+]
