--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,16 +28,23 @@ include = [
 links = "k8s-openapi-0.13.1"
 
 [dependencies]
-base64 = "0.13"
-bytes = "1"
-chrono = { version = "0.4.1", features = ["serde"] }
-http = { version = "0.2", optional = true }
-percent-encoding = { version = "2", optional = true }
-schemars = { version = "0.8", optional = true }
-serde = "1"
-serde_json = "1"
-serde-value = "0.7"
-url = { version = "2", optional = true }
+base64 = { version = "0.13", default-features = false, features = [
+	"alloc", # for base64::decode_config and base64::encode_config
+] }
+bytes = { version = "1", default-features = false}
+chrono = { version = "0.4.1", default-features = false, features = [
+	"alloc", # for chrono::DateTime::<Utc>::to_rfc3339_opts
+	"serde", # for chrono::DateTime<Utc>: serde::Deserialize, serde::Serialize
+] }
+http = { version = "0.2", optional = true, default-features = false }
+percent-encoding = { version = "2", optional = true, default-features = false }
+schemars = { version = "0.8", optional = true, default-features = false }
+serde = { version = "1", default-features = false }
+serde_json = { version = "1", default-features = false, features = [
+	"alloc", # "serde_json requires that either `std` (default) or `alloc` feature is enabled"
+] }
+serde-value = { version = "0.7", default-features = false }
+url = { version = "2", optional = true, default-features = false }
 
 [features]
 default = ["api"]
