--- a/k8s-openapi-codegen/Cargo.toml
+++ b/k8s-openapi-codegen/Cargo.toml
@@ -6,12 +6,20 @@ publish = false
 edition = "2018"
 
 [dependencies]
-backtrace = "0.3"
-env_logger = "0.9"
-http = "0.2"
-k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = ["serde"] }
-log = "0.4"
-reqwest = { version = "0.11", default-features = false, features = ["blocking", "default-tls", "json"] }
-serde = "1"
-serde_derive = "1"
-structopt = "0.3"
+backtrace = { version = "0.3", default-features = false, features = [
+	"std", # for backtrace::Backtrace
+] }
+env_logger = { version = "0.9", default-features = false }
+http = { version = "0.2", default-features = false }
+k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = [
+	"serde", # to parse OpenAPI specs from JSON files
+] }
+log = { version = "0.4", default-features = false }
+reqwest = { version = "0.11", default-features = false, features = [
+	"blocking", # for reqwest::blocking
+	"default-tls", # for TLS support
+	"json", # for reqwest::blocking::Response::json
+] }
+serde = { version = "1", default-features = false }
+serde_derive = { version = "1", default-features = false }
+structopt = { version = "0.3", default-features = false }
