--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -31,8 +31,9 @@ reqwest = { version = "0.11", default-features = false, features = [
 schemars = { version = "0.8", default-features = false, features = [
 	"derive", # for #[derive(schemars::JsonSchema)]
 ] }
-serde = { version = "1", default-features = false }
-serde_derive = { version = "1", default-features = false }
+serde = { version = "1", default-features = false, features = [
+	"derive",
+] }
 serde_yaml = { version = "0.8", default-features = false }
 tokio = { version = "1", default-features = false, features = [
 	"macros", # for #[tokio::test]
