--- a/k8s-openapi-codegen/Cargo.toml
+++ b/k8s-openapi-codegen/Cargo.toml
@@ -11,16 +11,22 @@ clap = { version = "3", default-features = false, features = [
 	"std", # "`std` feature is currently required to build `clap`"
 ] }
 env_logger = { version = "0.9", default-features = false }
+futures-util = { version = "0.3", default-features = false, features = [
+	"alloc", # for futures_util::stream::FuturesUnordered
+] }
 http = { version = "0.2", default-features = false }
 k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = [
 	"serde", # to parse OpenAPI specs from JSON files
 ] }
 log = { version = "0.4", default-features = false }
 reqwest = { version = "0.11", default-features = false, features = [
-	"blocking", # for reqwest::blocking
 	"default-tls", # for TLS support
-	"json", # for reqwest::blocking::Response::json
+	"json", # for reqwest::Response::json
 ] }
 serde = { version = "1", default-features = false, features = [
 	"derive",
+] }
+tokio = { version = "1", default-features = false, features = [
+	"macros",
+	"rt", # for tokio::task::spawn_blocking
 ] }
