Support generating bindings from local schema files.

--- a/k8s-openapi-codegen/Cargo.toml
+++ b/k8s-openapi-codegen/Cargo.toml
@@ -26,7 +26,11 @@ reqwest = { version = "0.11", default-features = false, features = [
 serde = { version = "1", default-features = false, features = [
 	"derive",
 ] }
+serde_json = { version = "1", default-features = false, features = [
+	"alloc", # "serde_json requires that either `std` (default) or `alloc` feature is enabled"
+] }
 tokio = { version = "1", default-features = false, features = [
 	"macros",
 	"rt", # for tokio::task::spawn_blocking
 ] }
+url = { version = "2", default-features = false }
