Switch tests to always tokio::time::sleep instead of custom Client::sleep.
Now that the tests use tokio, `tokio::time::pause()` already does
what `Client:sleep` did, namely pretend to sleep in replay mode without
changing the test code.

--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -37,6 +37,7 @@ serde = { version = "1", default-features = false, features = [
 serde_yaml = { version = "0.8", default-features = false }
 tokio = { version = "1", default-features = false, features = [
 	"macros", # for #[tokio::test]
+	"test-util", # for tokio::time::pause
 	"time", # for tokio::time::sleep
 ] }
 
