Recognize K8S_OPENAPI_ENABLED_VERSION env var in the build script to set the enabled version.
This is an alternative to enabling a version feature. It's only meant for
library developers who want to run `cargo check` etc.

Fixes #115

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,4 +35,4 @@ jobs:
     - name: 'Run'
       run: ./ci/per_version.sh
       env:
-        VERSION: "${{ matrix.version }}"
+        K8S_OPENAPI_ENABLED_VERSION: "${{ matrix.version }}"
