--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -11,7 +11,9 @@ include = [
 ]
 
 [dependencies]
-base64 = { version = "0.13", default-features = false }
+base64 = { version = "0.20", default-features = false, features = [
+	"alloc", # for base64::decode and base64::encode
+] }
 dirs = { version = "4", default-features = false }
 futures-core = { version = "0.3", default-features = false }
 futures-io = { version = "0.3", default-features = false }
