Add `earliest` and `latest` features that enable the earliest and latest version feature.
These will be kept in sync with every release as version features are added and
removed, so users who always want to enable the earliest or latest version
can just use these.

Fixes #140

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ default = ["api"]
 api = ["http", "percent-encoding", "url"] # Enables API operation functions and response types. If disabled, only the resource types will be exported.
 
 # Each feature corresponds to a supported version of Kubernetes
+earliest = ["v1_20"]
 v1_20 = []
 v1_21 = []
 v1_22 = []
@@ -60,10 +61,11 @@ v1_24 = []
 v1_25 = []
 v1_26 = []
 v1_27 = []
+latest = ["v1_27"]
 
 [package.metadata.docs.rs]
 # docs.rs generates docs for the latest version. To see the docs for an older version, please generate them yourself.
-features = ["v1_27"]
+features = ["latest"]
 
 [workspace]
 members = [
