--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -24,10 +24,9 @@ k8s-openapi = { path = "..", features = [
     "schemars", # for resource types: schemars::JsonSchema
 ] }
 k8s-openapi-derive = { path = "../k8s-openapi-derive" }
-openssl = { version = "0.10.46", default-features = false }
 pin-project = { version = "1", default-features = false }
 reqwest = { version = "0.11", default-features = false, features = [
-    "native-tls", # for TLS support
+    "rustls-tls-manual-roots", # for TLS support
     "stream", # for reqwest::Response::bytes_stream
 ] }
 schemars = { version = "0.8", default-features = false, features = [
