--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "k8s-openapi"
 version = "0.19.0"
 license = "Apache-2.0"
-authors = ["Arnavion <me@arnavion.dev>"]
+authors = ["Arnav Singh <me@arnavion.dev>"]
 categories = ["api-bindings", "web-programming::http-client"]
 description = "Bindings for the Kubernetes client API"
 documentation = "https://arnavion.github.io/k8s-openapi/v0.19.x/k8s_openapi/"
