Update http to v1
reqwest still pulls in http 0.2, so change all uses of
`http::{Method, StatusCode}` to the reqwest re-exports. This is arguably
more correct since these values are eventually used with a reqwest client.

`http::{Request, Uri}` are still used because reqwest does not re-export them,
which necessitates a conversion from `http::Method` to `reqwest::Method`.
It has been marked with a `TODO(rustup)` so that it can be removed when
reqwest is updated to a version that depends on http v1.

--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -22,7 +22,9 @@ futures-io = { version = "0.3", default-features = false }
 futures-util = { version = "0.3", default-features = false, features = [
     "io", # for futures_util::StreamExt::into_async_read
 ] }
-http = { version = "0.2", default-features = false }
+http = { version = "1", default-features = false, features = [
+    "std", # "`std` feature currently required, support for `no_std` may be added later"
+] }
 k8s-openapi = { path = "..", features = [
     "schemars", # for resource types: schemars::JsonSchema
 ] }
