--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,8 @@ v1_27 = []
 v1_28 = []
 v1_29 = []
 latest = ["v1_29"]
+# Enable `schemars::JsonSchema` implementations on resource types.
+schemars = ["dep:schemars"]
 
 [package.metadata.docs.rs]
 # docs.rs generates docs for the latest version. To see the docs for an older version, please generate them yourself.
