--- a/k8s-openapi-codegen-common/Cargo.toml
+++ b/k8s-openapi-codegen-common/Cargo.toml
@@ -23,3 +23,7 @@ serde = { version = "1", optional = true, default-features = false, features = [
     "derive", # for #[derive(serde::Deserialize, serde::Serialize)]
     "rc", # for Arc<Parameter>: serde::Deserialize
 ] }
+
+[features]
+# Enable `serde::Deserialize` implementations on OpenAPI types.
+serde = ["dep:serde"]
