--- a/k8s-openapi-tests/Cargo.toml
+++ b/k8s-openapi-tests/Cargo.toml
@@ -31,8 +31,8 @@ k8s-openapi = { path = "..", features = [
 k8s-openapi-derive = { path = "../k8s-openapi-derive" }
 percent-encoding = { version = "2", default-features = false }
 pin-project = { version = "1", default-features = false }
-reqwest = { version = "0.12", default-features = false, features = [
-    "rustls-tls-manual-roots", # for TLS support
+reqwest = { version = "0.13", default-features = false, features = [
+    "rustls", # for TLS support
     "stream", # for reqwest::Response::bytes_stream
 ] }
 schemars = { version = "1", default-features = false, features = [
